--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -2,6 +2,19 @@ iv {
 	border-radius: 5px;
 }
 
+p {
+	text-indent:30px;
+}
+
+h3 {
+	text-indent:10px;
+}
+
+h4 {
+	text-indent:20px;
+	font-size: 16px;
+}
+
 #header {
 	z-index: 1;
 	position: fixed;
@@ -30,60 +43,10 @@ iv {
 	color: #ffffff;
 }
 
-h4 {
-	margin-left: 5px;
-	margin-bottom: 15px;
-	font-family: Verdana, sans-serif;
-}
-
-.right p {
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: -10px;
-	font-family: Garamond, serif;
-	color: #000000;
-}
-
 li {
 	list-style-type: square;
 }
 
 a:hover {
 	font-weight: bold;
-}
-
-.left {
-	position: relative;
-	float: left;
-	margin-top: 50px;
-	width: 10%;
-	height: 400px;
-	background-color: #B9D7D9;
-	margin-bottom: 10px;
-}
-
-.right {
-	position: relative;
-	float: right;
-	margin-top: 50px;
-	width: 88%;
-	height: 400px;
-	background-color: #F4EBC3;
-	margin-bottom: 10px;
-}
-
-#footer {
-	position: relative;
-	height: 50px;
-	background-color: #668284;
-	clear: both;
-	font-family: Verdana, sans-serif;
-	font-size: 14px;
-	text-align: center;
-	color: #ffffff;
-}
-
-#footer p {
-	position: relative;
-	padding-top: 15px;
 }
