--- a/resume/resume.css
+++ b/resume/resume.css
@@ -33,8 +33,10 @@ body { font-family: Georgia; color: #444; }
 /* //-- core typography and style -- */
 #hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; }
 h2 { font-size: 152% }
-h3, h4 { font-size: 125%; }
-h1, h2, h3, h4 { color: #333; }
+h3 { font-size: 135%}
+h4 { font-size: 120%}
+h1, h2, h3, h4 { color: #333}
+h3, h4 { line-height:150%}
 p { font-size: 115%; line-height: 18px; padding-right: 3em; }
 a { color: #990003 }
 a:hover { text-decoration: none; }
@@ -69,4 +71,4 @@ a#pdf:hover { background: #222; }
 
 /* --// override to force 1/8th width grids -- */
 .yui-gf .yui-u{width:80.2%;}
-.yui-gf div.first{width:12.3%;}
+.yui-gf div.first{width:13.3%;}
